Changed images and added use cases as a section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
+				<!-- <header id="header" class="alt">
 					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
 					<nav id="nav">
 						<ul>
@@ -42,7 +42,7 @@
 							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
-				</header>
+				</header> -->
 
 			<!-- Banner -->
 				<section id="banner">
@@ -59,11 +59,11 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>W
+							<h2>Get the best out of your algorithms
 							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							with high quality data annotation</h2>
+							<p>You give us your unstructured data<br />
+							you get it back structured, annotated, tagged, classified, ... you name it!.</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
@@ -77,8 +77,8 @@
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Quality</h3>
-								<p>Quality is key! You don't want to spend hours of reviewing your labeled data. With our machine learning powered quality layer we make sure you get only the best and double checked results.</p>
+								<h3>Reliable</h3>
+								<p>Quality is key! Don't spend hours of reviewing your labeled data. With our machine learning powered quality layer we make sure you get only the best and double checked results.</p>
 							</section>
 						</div>
 						<div class="features-row">
@@ -95,13 +95,13 @@
 						</div>
 					</section>
 
-					<!-- <div class="row">
+					<div class="row">
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Use case 1</h3>
+								<p>With the help of understand.ai an autonomous driving company can label the videos which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -112,15 +112,15 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Use case 2</h3>
+								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
 						</div>
-					</div> -->
+					</div>
 
 				</section>
 
