Changed text and images for use cases

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<h2>understand.ai</h2>
 					<p>we make your data useful</p>
 					<ul class="actions">
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="#" class="button special">Contact us</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</section>
@@ -62,8 +62,12 @@
 							<h2>Get the best out of your algorithms
 							<br />
 							with high quality data annotation</h2>
-							<p>You give us your unstructured data<br />
-							you get it back structured, annotated, tagged, classified, ... you name it!.</p>
+							<!-- From data to insights. -->
+							<!-- <p>Give us your raw unlabeled data<br />
+							we structure, annotate, tag and categorize your data.</p> -->
+							<p>Let's be honest. You just want to run your fancy machine learning algorithms, right?<br />
+							 But there is this huge amount of unlabeled data which stands in your way.<br />
+						  We got you covered: we structure, annotate, tag and categorize your data tailored to your needs. </p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
