Changed wording in 'fast' section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
 								<h3>Fast</h3>
-								<p>Speed makes the difference. Don't wait until your interns finished their labeling work. Our qualified crowd will deliver you results at highspeed.</p>
+								<p>Speed makes the difference. Don't wait until your interns finished their labeling work. Our qualified crowd delivers you results at highspeed.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
