--- a/index.html
+++ b/index.html
@@ -47,13 +47,26 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>understand.ai</h2>
-					<p>we make your data useful</p>
+					<p>We <span class="element"></span> your data</p>
+					<!-- <p>we make your data useful</p> -->
 					<ul class="actions">
 						<li><a href="#" class="button special">Contact us</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</section>
+				<!-- <script src="assets/js/jquery.min.js"></script> -->
+				<!-- <script src="assets/js/typed.js"></script>
+				<script>
+				    $(function(){
+				        $(".element").typed({
+				            strings: ["First sentence.", "Second sentence."],
+				            typeSpeed: 0
+				        });
+				    });
+				</script> -->
 
+
+				<span class="element"></span>
 			<!-- Main -->
 				<section id="main" class="container">
 
@@ -172,6 +185,15 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/typed.js"></script>
+			<script>
+					$(function(){
+							$(".element").typed({
+									strings: ["classify", "tag", "annotate", "label", "identify", "caption", "rate", "parse"],
+									typeSpeed: 0,
+									loop: true,
+							});
+					});
+			</script>
 	</body>
 </html>
