Added formspree to submit form so that emails are forwareded

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alpha by HTML5 UP</title>
+		<title>understand.ai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -134,7 +134,7 @@
 					<h2>Sign up for beta access</h2>
 					<p>Concentrate on what you can do best and let us annotate your data.</p>
 
-					<form>
+					<form action="https://formspree.io/philorlando92@yahoo.de" method="POST">
 						<div class="row uniform 50%">
 							<div class="8u 12u(mobilep)">
 								<input type="email" name="email" id="email" placeholder="Email Address" />
