Added redirect to special thanks site after uploading data

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Cost effecive</h3>
+								<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
@@ -206,7 +206,7 @@
         <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
 				<form action="https://getsimpleform.com/messages?form_api_token=acd9ad0f4fa3cdb323880aaac1beef11" method="post">
 					<!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-					<input type='hidden' name='redirect_to' value='https://0rland0.github.com' />
+					<input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
 					<!-- all your input fields here.... -->
 					<label>Sample data if available (CSV, zip, ...)</label>
 					<input type="file" name="sample-data" class="form-control">
