--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 						<!-- <li><a href="#" class="button">Learn More</a></li> -->
 					</ul>
 				</section>
+
+
+
 			<!-- Main -->
 				<section id="main" class="container">
 
@@ -79,6 +82,7 @@
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
 
+
 					<section class="box special features">
 						<div class="features-row">
 							<section>
@@ -95,7 +99,7 @@
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
-								<h3>Cost effecive</h3>
+								<h3>Cost effective</h3>
 								<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
 							</section>
 							<section>
@@ -111,7 +115,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Use case 1</h3>
+								<h3>Use case: Autonomous driving</h3>
 								<p>With the help of understand.ai an autonomous driving company can label the videos which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
@@ -123,7 +127,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Use case 2</h3>
+								<h3>Use case: Medicine</h3>
 								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
@@ -154,6 +158,7 @@
 					</form>
 
 				</section>
+
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -211,15 +216,15 @@
 					<label>Sample data if available (CSV, zip, ...)</label>
 					<input type="file" name="sample-data" class="form-control">
 					<label>How should the result look like?</label>
-					<input type='text' name='task-description' />
+					<input type='text' name='task-description' placeholder='E.g. each image should be labeled as cat or dog' />
 					<label>Your name?</label>
-					<input type='text' name='name' />
+					<input type='text' name='name' placeholder='e.g. John Doe'/>
 					<label>Company Name</label>
-					<input type='text' name='company-name' />
+					<input type='text' name='company-name' placeholder='e.g. Willy Wonka Inc.'/>
 					<label>Phone number</label>
-					<input type='text' name='phone-number' />
+					<input type='text' name='phone-number' placeholder='e.g. +49 176 41648137' />
 					<label>Email</label>
-					<input type='text' name='email' />
+					<input type='text' name='email' placeholder='e.g. foo@bar.com'/>
 					<input type='submit' value='Submit' />
 				</form>
       </div>
