added quotation-section, step-section, changed cta-button font size

--- a/index.html
+++ b/index.html
@@ -79,9 +79,34 @@
 							 But there is this huge amount of unlabeled data which stands in your way.<br />
 						  We got you covered: we structure, annotate, tag and categorize your data tailored to your needs. </p>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
 
+					</section>
+					<section  class="crowd">
+						<h2>"A good company would use Android, iOS, and machine learning but use the <bold>crowd</bold> to learn something trivial"</h2>
+						<p> Eric Schmidt, Google </p>
+					</section>
+					<section class="box special features">
+						<h2>Get your labelled Data in 3 steps:</h2>
+						<br/>
+						<div class="row">
+						  <div class="col-md-4">
+								<span class="icon major accent2"><h2>1</h2></span>
+								<h3>Send Us Your Data</h3>
+								<p>Upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
+							</div>
+							<div class="col-md-4">
+								<span class="icon major accent5"><h2>2</h2></span>
+								<h3>We Understand Your Data</h3>
+								<p>By combining customized Machine Learning methods and human classification, we understand, classify and label your data.</p>
+							</div>
+							<div class="col-md-4">
+								<span class="icon major accent3"><h2>3</h2></span>
+								<h3>Get Your Labeled Data</h3>
+								<p>We send you your labeled data back and you can start working on your actual project.</p>
+							</div>
+						</div>
+<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+					</section>
 
 					<section class="box special features">
 						<div class="features-row">
@@ -144,7 +169,7 @@
 
 					<h2>Get in contact now</h2>
 					<p>Concentrate on what you can do best and let us annotate your data.</p>
-
+					<br />
 					<form>
 						<div class="row uniform 50%">
 							<!-- <div class="8u 12u(mobilep)">
