changed text of 3rd step to fit column size :D

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<div class="col-md-4">
 								<span class="icon major accent3"><h2>3</h2></span>
 								<h3>Get Your Labeled Data</h3>
-								<p>Now you can download your labeled and structured data and get started working on your actual project.</p>
+								<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
 							</div>
 						</div>
 <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
