Changed button type from submit to button which caused a bug in showing the modal

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							</div> -->
 							<div class="12u 12u(mobilep)">
 								<!-- <a href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a> -->
-								<input type="submit" value="Request free demo" class="fit" class="button special" data-toggle="modal" data-target="#myModal"/>
+								<input type="button" value="Request free demo" class="fit" class="button special" data-toggle="modal" data-target="#myModal"/>
 							</div>
 						</div>
 					</form>
