--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="High quality data annotation to boost your machine learning algorithms.">
+		<meta property="og:title" content="understand.ai" />
+		<meta property="og:description" content="High quality data annotation to boost your machine learning algorithms." />
+		<meta property="og:image" content="images/banner.jpg" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="landing">
