Replaced formspree with jotforms in the contact modal for supporting file uploads

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<ul class="actions">
 						<!-- Trigger the modal with a button -->
 <!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
-
+ 						<!-- <li><a href="#" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal">Request free demo</a></li> -->
 						<li><a href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
 						<!-- <li><a href="#" class="button">Learn More</a></li> -->
 					</ul>
@@ -114,7 +114,7 @@
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
 								<h3>Fast</h3>
-								<p>Speed makes the difference. Don't wait until your interns finished their labeling work. Our qualified crowd delivers you results at highspeed.</p>
+								<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
@@ -131,7 +131,7 @@
 							<section>
 								<span class="icon major fa-lock accent5"></span>
 								<h3>Secure</h3>
-								<p>No worries about pricacy and data proctection. We put high effort in securing your data from end to end.</p>
+								<p>No worries about privacy and data proctection. We put high effort in securing your data from end to end.</p>
 							</section>
 						</div>
 					</section>
@@ -178,7 +178,8 @@
 							</div> -->
 							<div class="12u 12u(mobilep)">
 								<!-- <a href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a> -->
-								<input type="button" value="Request free demo" class="fit" class="button special" data-toggle="modal" data-target="#myModal"/>
+
+								<input type="button" value="Request free demo" class="fit" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal"/>
 							</div>
 						</div>
 					</form>
@@ -214,6 +215,7 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/typed.js"></script>
 			<script src="assets/js/bootstrap.min.js"></script>
+			<script src="https://form.jotformeu.com/static/feedback2.js?3.3.REV" type="text/javascript"> var JFL_61724662942359 = new JotformFeedback({ formId: '61724662942359', base: 'https://form.jotformeu.com/', windowTitle: 'Upload your sample data', background: '#FFA500', fontColor: '#FFFFFF', type: 'false', height: 500, width: 700, openOnLoad: false }); </script>
 			<script>
 					$(function(){
 							$(".element").typed({
@@ -231,15 +233,16 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Give us a taste of your data</h4>
+        <!-- <h4 class="modal-title">Give us a taste of your data</h4> -->
       </div>
       <div class="modal-body">
-        <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
+				<script type="text/javascript" src="https://form.jotformeu.com/jsform/61724662942359"></script>
+        <!-- <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
 				<form action="https://getsimpleform.com/messages?form_api_token=acd9ad0f4fa3cdb323880aaac1beef11" method="post">
 					<!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-					<input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
+					<!-- <input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
 					<!-- all your input fields here.... -->
-					<label>Sample data if available (CSV, zip, ...)</label>
+					<!-- <label>Sample data if available (CSV, zip, ...)</label>
 					<input type="file" name="sample-data" class="form-control">
 					<label>How should the result look like?</label>
 					<input type='text' name='task-description' placeholder='E.g. each image should be labeled as cat or dog' />
@@ -252,7 +255,7 @@
 					<label>Email</label>
 					<input type='text' name='email' placeholder='e.g. foo@bar.com'/>
 					<input type='submit' value='Submit' />
-				</form>
+				</form> -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
