Fixed typos and removed learn more element below use cases

--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
 
 					</section>
 					<section  class="crowd">
-						<h2>"A good company would use Android, iOS, and machine learning but use the <bold>crowd</bold> to learn something trivial"</h2>
+						<h2>"A good company would use Android, iOS, and machine learning but use the <bold>crowd</bold> to learn something trivial."</h2>
 						<p> Eric Schmidt, Google </p>
 					</section>
 					<section class="box special features">
-						<h2>Get your labelled Data in 3 steps:</h2>
+						<h2>Get your labeled data in 3 steps:</h2>
 						<br/>
 						<div class="row">
 						  <div class="col-md-4">
 								<span class="icon major accent2"><h2>1</h2></span>
-								<h3>Send Us Your Data</h3>
+								<h3>Send us your data</h3>
 								<p>Upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent5"><h2>2</h2></span>
-								<h3>We Understand Your Data</h3>
+								<h3>We understand your data</h3>
 								<p>By combining customized Machine Learning methods and human classification, we understand, classify and label your data.</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent3"><h2>3</h2></span>
-								<h3>Get Your Labeled Data</h3>
+								<h3>Get your labeled data</h3>
 								<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
 							</div>
 						</div>
@@ -142,10 +142,10 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
 								<h3>Use case: Autonomous driving</h3>
-								<p>With the help of understand.ai an autonomous driving company can label the videos which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
-								<ul class="actions">
+								<p>With the help of understand.ai an autonomous driving company can label the video and images which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
+								<!-- <ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								</ul> -->
 							</section>
 
 						</div>
@@ -155,9 +155,9 @@
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>Use case: Medicine</h3>
 								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
-								<ul class="actions">
+								<!-- <ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								</ul> -->
 							</section>
 
 						</div>
