Added more context to the quote of eric schmidt

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</section>
 					<section  class="crowd">
 						<h2>"A good company would use Android, iOS, and machine learning but use the <bold>crowd</bold> to learn something trivial."</h2>
-						<p> Eric Schmidt, Google </p>
+						<p> Eric Schmidt, Google, about the perfect future company </p>
 					</section>
 					<section class="box special features">
 						<h2>Get your labeled data in 3 steps:</h2>
