Fixed typo in secure section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<section>
 								<span class="icon major fa-lock accent5"></span>
 								<h3>Secure</h3>
-								<p>No worries about privacy and data proctection. We put high effort in securing your data from end to end.</p>
+								<p>No worries about privacy and data protection. We put high effort in securing your data from end to end.</p>
 							</section>
 						</div>
 					</section>
